Add additional details in README